--- a/TutoDjango/monApp/templates/monApp/list_produits.html
+++ b/TutoDjango/monApp/templates/monApp/list_produits.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Mon app DJANGO</title>
+    <title>Mon app DJANGO | Mes produits</title>
 </head>
 
 <body>
@@ -11,10 +11,21 @@
     <ul>
         {% for prdt in prdts %}
         <li>
-            {{ prdt.intituleProd }}
+            {{ prdt.intituleProd | upper}}
         </li>
         {% endfor %}
     </ul>
+    <p>
+        J'ai
+        {% if prdts|length < 5 %} 
+            peu de 
+        {% elif prdts|length < 10 %} 
+            quelques 
+        {% else %} 
+            beaucoup de 
+        {% endif %}
+            produits préférés. 
+    </p>
 </body>
 
 </html>
