--- a/TutoDjango/monApp/templates/monApp/home.html
+++ b/TutoDjango/monApp/templates/monApp/home.html
@@ -1,5 +1,13 @@
 {% extends 'monApp/base.html' %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block contenu %}
     <h1> {{ titreh1 }} </h1>
+
+    {% if param %}
+        <h2>Welcome {{ param }}</h2>
+    {% endif %}
+
+    <p>{{ message }}</p>
 {% endblock %}
