--- a/TutoDjango/monApp/templates/monApp/base.html
+++ b/TutoDjango/monApp/templates/monApp/base.html
@@ -30,6 +30,22 @@
                 </li>
             </ul>
         </div>
+        <div class="navbar" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Déconnexion</a>
+                    </li>
+                {%else%}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Connexion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Inscription</a>
+                    </li>
+                {%endif%}
+            </ul>
+        </div>
     </nav>
     {% block menu %}{% endblock %}
     {% endblock %}
