--- a/TutoDjango/monApp/templates/monApp/base.html
+++ b/TutoDjango/monApp/templates/monApp/base.html
@@ -17,6 +17,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'lst_prdts' %}">Produits</a>
                 </li>
                 <li class="nav-item">
@@ -27,6 +30,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'lst_rayons' %}">Rayons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About us</a>
                 </li>
             </ul>
         </div>
