--- a/TutoDjango/monApp/templates/monApp/list_produits.html
+++ b/TutoDjango/monApp/templates/monApp/list_produits.html
@@ -17,6 +17,7 @@
             <th>Date fabrication</th>
             <th>Catégorie</th>
             <th>Statut</th>
+            <th>Action</th>
         </thead>
         <tbody>
             {% for prdt in prdts %}
@@ -27,6 +28,7 @@
                 <td>{{ prdt.dateFabProd }}</td>
                 <td>{{ prdt.categorie }}</td>
                 <td>{{ prdt.status }}</td>
+                <td><a href="{% url 'prdt-chng' prdt.refProd %}">Modifier</a></td>
             </tr>
             {% endfor %}
         </tbody>
