Create sur Catégorie, Statut et Rayon + début update dans views

--- a/TutoDjango/monApp/templates/monApp/list_categories.html
+++ b/TutoDjango/monApp/templates/monApp/list_categories.html
@@ -23,6 +23,9 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <h1>Pour créer une nouvelle catégorie cliquer <a href="{% url 'crt-cat' %}">ici</a>.</h1>
+
     <p>
         J'ai
         {% if cats|length < 5 %} 
