--- a/TutoDjango/monApp/templates/monApp/list_rayons.html
+++ b/TutoDjango/monApp/templates/monApp/list_rayons.html
@@ -23,6 +23,9 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <h1>Pour créer un nouveau statut cliquer <a href="{% url 'crt-rayon' %}">ici</a>.</h1>
+
     <p>
         J'ai
         {% if rayons|length < 5 %} 
