Finalisation des opération CRUD sur Catégorie, Statut et Rayon

--- a/TutoDjango/monApp/templates/monApp/detail_rayon.html
+++ b/TutoDjango/monApp/templates/monApp/detail_rayon.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block contenu %}
-    <a href="{% url 'lst_cats' %}">Retour à la liste des rayons</a>
+    <a href="{% url 'lst_rayons' %}">Retour à la liste des rayons</a>
 
     <h2>{{ ray.nomRayon }}</h2>
     
