--- a/TutoDjango/monApp/templates/monApp/list_categories.html
+++ b/TutoDjango/monApp/templates/monApp/list_categories.html
@@ -13,13 +13,16 @@
         <thead>
             <th>Id</th>
             <th>Nom catégorie</th>
-            <th colspan="2" style="text-align: center;">Action</th>
+            <th>Nombre de Produits</th>
+            <th colspan="3" style="text-align: center;">Action</th>
         </thead>
         <tbody>
             {% for cat in cats %}
             <tr>
-                <td><a href="{% url 'dtl_cat' cat.idCat %}">{{ cat.idCat }}</a></td>
+                <td>{{ cat.idCat }}</td>
                 <td>{{ cat.nomCat }}</td>
+                <td>{{ cat.nb_produits }} </td>
+                <td><a href="{% url 'dtl_cat' cat.idCat %}">Détail</a></td>
                 <td><a href="{% url 'cat-chng' cat.idCat %}">Modifier</a></td>
                 <td><a href="{% url 'dlt-cat' cat.idCat %}">Supprimer</a></td>
             </tr>
