--- a/TutoDjango/monApp/templates/monApp/detail_statut.html
+++ b/TutoDjango/monApp/templates/monApp/detail_statut.html
@@ -7,13 +7,49 @@
 {% endblock %}
 
 {% block contenu %}
-    <a href="{% url 'lst_stats' %}">Retour à la liste des statuts</a>
-
-    <h2>{{ stat.libelleStatus }}</h2>
-    
-    <ul>
-        <li>Référence statut : {{ stat.idStatus }} </li>
-    </ul>
+<div class="card mb-4">
+    <div class="card-header bg-primary text-white">
+        <h4>Détail de le statut</h4>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">{{ stat.libelleStatus }}</h5>
+        <ul class="list-unstyled">
+            <li><strong>Référence :</strong> {{ stat.idStatus }}</li>
+            <li><strong>Nom statut :</strong> {{ stat.libelleStatus }}</li>
+            <li><strong>Nb produit : </strong>{{ stat.nb_produits }} produit(s)</li>
+        </ul>
+        <div class="car-footer text-center">
+            <a href="{% url 'stat-chng' stat.idStatus %}" class="btn btn-warning mt-2">Modifier</a>
+            <a href="{% url 'dlt-stat' stat.idStatus %}" class="btn btn-danger mt-2">Supprimer</a>
+            <a href="{% url 'lst_stats'%}" class="btn btn-info mt-2">Retour</a>
+        </div>
+    </div>
+</div>
+<div class="card mb-4">
+    <div class="card-header bg-primary text-white">
+        <h4>Ce statut contient <strong>{{ stat.nb_produits }}</strong> produit(s)</h4>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            {% if prdts %}
+            {% for prdt in prdts %}
+            <div class="col-sm-3">
+                <div class="card mb-2 text-center">
+                    <div class="card-header bg-info text-white">
+                        <h5 class="card-title">{{ prdt.intituleProd }}</h5>
+                    </div>
+                    <div class="card-body">
+                        <a href="{% url 'dtl_prdt' prdt.refProd %}" class="btn btn-primary mt-2">Détails</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p class="text-muted">Aucun produit trouvé pour ce statut.</p>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 
