--- a/TutoDjango/monApp/templates/monApp/list_statuts.html
+++ b/TutoDjango/monApp/templates/monApp/list_statuts.html
@@ -13,13 +13,16 @@
         <thead>
             <th>Id</th>
             <th>Nom statut</th>
-            <th colspan="2" style="text-align: center;">Action</th>
+            <th>Nombre de Produits</th>
+            <th colspan="3" style="text-align: center;">Action</th>
         </thead>
         <tbody>
             {% for stat in stats %}
             <tr>
-                <td><a href="{% url 'dtl_stat' stat.idStatus %}">{{ stat.idStatus }}</a></td>
-                <td>{{ stat.libelleStatus }} </td>
+                <td>{{ stat.idStatus }}</td>
+                <td>{{ stat.libelleStatus }}</td>
+                <td>{{ stat.nb_produits }}</td>
+                <td><a href="{% url 'dtl_stat' stat.idStatus %}">Détail</a></td>
                 <td><a href="{% url 'stat-chng' stat.idStatus %}">Modifier</a></td>
                 <td><a href="{% url 'dlt-stat' stat.idStatus %}">Supprimer</a></td>
             </tr>
