Finalisation barre de recherche

--- a/TutoDjango/monApp/templates/monApp/list_produits.html
+++ b/TutoDjango/monApp/templates/monApp/list_produits.html
@@ -8,6 +8,12 @@
 
 {% block contenu %}
     <h1>Hello mes produits !</h1>
+    <!-- Barre de recherche -->
+    <p class="lead mb-3 ml-0">Rechercher un élément...</p>
+    <form style="display: flex; align-items: center;" method="GET" action="">
+        <input class="form-control" type="text" name="search" placeholder="Tapez ici votre recherche" value="{{ request.GET.search }}">
+        <button type="submit" class="btn btn-success mt-2">Rechercher</button>
+    </form>
     <p>Mes produits sont :</p>
     <table class="table">
         <thead>
