--- a/TutoDjango/monApp/templates/monApp/detail_rayon.html
+++ b/TutoDjango/monApp/templates/monApp/detail_rayon.html
@@ -8,10 +8,11 @@
 
 {% block contenu %}
     <div class="card mb-4">
-        <div class="card-header bg-primary text-white">
+        <div class="card-header bg-primary text-white" style="display: flex; justify-content: space-between;">
             <h4>Ce rayon contient <strong> {{total_nb_produit}} </strong> produit(s) pour un total de
                 <strong>{{total_rayon|floatformat:2 }} € </strong>
             </h4>
+            <a href="{% url 'cntnr-crt' ray.idRayon %}" class="btn btn-success mt-2">Ajouter</a>
         </div>
         <div class="card-body">
             <div class="row">
@@ -29,6 +30,8 @@
                                         <li>Total : {{ data.total_produit}} €</li>
                                     </ul>
                                     <a href="{% url 'dtl_prdt' data.produit.refProd %}" class="btn btn-primary mt-2">Détails</a>
+                                    <a href="{% url 'cntnr-chng' ray.idRayon data.produit.refProd%}" class="btn btn-warning mt-2">Modifier</a>
+                                    <a href="{% url 'cntnr-dlt' ray.idRayon data.produit.refProd%}" class="btn btn-danger mt-2">Supprimer</a>
                                 </div>
                             </div>
                         </div>
